fixing navbar, replaced bookings with profile and aligned text in dropdown menu

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -62,3 +62,10 @@
   background-color: white;
   position: sticky;
 }
+
+.dropdown-menu {
+  a {
+    text-align: center;
+    margin: 0 0 0 0;
+  }
+}
